# mcp4725

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build_and_test.yml  ci.yml
bluepill-examples/: Cargo.toml
bluepill-examples/examples/: fastcommand.rs  read_registers.rs  reset.rs  saw.rs  write_and_read_eeprom.rs
examples/: 01-bluepill_saw.rs  saw.rs
src/: encode.rs  lib.rs  status.rs
