[package]
name = "mcp4725"
version = "0.1.2"
edition = "2018"

authors = ["Mendelt Siebenga <msiebenga@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Microchip MCP4725 DAC Driver for Rust Embedded HAL"
repository = "https://github.com/mendelt/mcp4725"
categories = ["no-std", "embedded"]
keywords = ["dac", "i2c"]
readme = "README.md"

[badges]
travis-ci = { repository = "mendelt/mcp4725" }

[dependencies]
embedded-hal = "0.2.3"
