[package]
name = "mcp4725"
version = "0.4.1"
edition = "2018"

authors = ["Mendelt Siebenga <msiebenga@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Microchip MCP4725 DAC Driver for Rust Embedded HAL"
repository = "https://github.com/mendelt/mcp4725"
categories = ["no-std", "embedded"]
keywords = ["dac", "i2c"]
readme = "README.md"

[dependencies]
embedded-hal = "0.2.6"

[dev-dependencies]
embedded-hal-mock = "0.8.0"
