[package]
name = "bluepill-examples"
version = "0.4.2"
authors = ["Mendelt Siebenga <msiebenga@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
cortex-m-semihosting = "0.3.7"
mcp4725 = {path = ".."}
hal = {package = "stm32f1xx-hal", version = "0.7.0", features = ["rt", "stm32f103", "medium"]}
panic-semihosting = "0.5.6"
